--- a/containers/volsync-test/Dockerfile
+++ b/containers/volsync-test/Dockerfile
@@ -3,4 +3,4 @@ RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
 COPY ./requirements.txt .
 RUN pip3 install -r requirements.txt
-COPY . .
+COPY *.py /usr/src/app/
